--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.4.1",
     "@material-ui/core": "^3.2.0",
     "@material-ui/icons": "^3.0.1",
     "axios": "^0.18.0",
