--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -7,10 +7,14 @@
     "@material-ui/core": "^3.2.0",
     "@material-ui/icons": "^3.0.1",
     "axios": "^0.18.0",
+    "immutability-helper": "^2.8.1",
     "lodash": "^4.17.11",
+    "lodash.flow": "^3.5.0",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-avatar-edit": "^0.6.0",
+    "react-dnd": "^5.0.0",
+    "react-dnd-html5-backend": "^5.0.1",
     "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
     "react-scripts": "1.1.1",
