--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -63,6 +63,7 @@
     "bodymen": "^1.0.1",
     "compression": "^1.6.2",
     "cors": "^2.7.1",
+    "crypto": "^1.0.1",
     "dateformat": "^3.0.2",
     "es6-promise": "^4.0.5",
     "excel4node": "^1.3.5",
@@ -86,6 +87,7 @@
     "rand-token": "^0.3.0",
     "request": "^2.74.0",
     "request-promise": "^4.1.1",
-    "sendgrid": "^4.0.2"
+    "sendgrid": "^4.0.2",
+    "util": "^0.11.1"
   }
 }
